Crud del municipio

--- a/Prueba_NET/Pueba_ASP.Model/Pueba_ASP.Model.csproj
+++ b/Prueba_NET/Pueba_ASP.Model/Pueba_ASP.Model.csproj
@@ -41,7 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsMunicipioModelo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Pueba_ASP.Data\Pueba_ASP.Data.csproj">
+      <Project>{85ae7776-6519-42d3-8772-222ee3b695f1}</Project>
+      <Name>Pueba_ASP.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
