--- a/Prueba_NET/Pueba_ASP.Model/Pueba_ASP.Model.csproj
+++ b/Prueba_NET/Pueba_ASP.Model/Pueba_ASP.Model.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsMunicipioModelo.cs" />
+    <Compile Include="clsRegionModelo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
